--- a/[CP] VisitingTales/manifest.json
+++ b/[CP] VisitingTales/manifest.json
@@ -3,11 +3,11 @@
    "Name": "Visiting Tales",
    "Author": "ItsBenter",
    "Version": "1.0.0",
-   "Description": "Adds new characters and expand the story in Pelican Town.",
+   "Description": "Adds visiting characters and expands the story in Pelican Town.",
    "UniqueID": "ItsBenter.VisitingTales.CP",
    "MinimumApiVersion": "4.0",
    "UpdateKeys": [
-      "Nexus:6899"
+      "Nexus:???"
    ],
    "ContentPackFor": {
       "UniqueID": "Pathoschild.ContentPatcher"
